# scuoladati-semantic-modeling

./: .gitignore  LICENSE  README.md  profiles.yml  pyproject.toml
adventureworks/: dbt_project.yml
adventureworks/models/: schema.yml
adventureworks/models/marts/: _semantic_layer.yml  _time_spine.yml  fct_customers.sql  fct_orders.sql  fct_products.sql  time_spine_daily.sql
adventureworks/models/staging/: stg_categories.sql  stg_customers.sql  stg_order_lines.sql  stg_orders.sql  stg_products.sql
adventureworks/seeds/: categories.csv  customers.csv  order_lines.csv  orders.csv  products.csv
adventureworks/tests/: assert_net_revenue_lte_gross_revenue.sql
docs/: catalog.json  graph_summary.json  manifest.json  run_results.json
notebooks/: 01_introduzione.ipynb
