[project]
name = "adventureworks-dbt-course"
version = "1.0.0"
description = "Corso di Modellazione Semantica con dbt - Esempio AdventureWorks"
authors = [{name = "Riccardo Maganza", email = "riccardo@agentic-data.com"}]
requires-python = ">=3.10,<3.14"
dependencies = [
    "duckdb",
    "dbt-duckdb",
    "jupyter",
    "matplotlib",
    "pandas",
    "dbt-metricflow>=0.10.1,<0.11",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[dependency-groups]
dev = []

[tool.jupyter]
 kernelspec = "python3"
