[project]
name = "adventureworks-dbt-course"
version = "1.0.0"
description = "Corso di Modellazione Semantica con dbt - Esempio AdventureWorks"
authors = [{name = "Riccardo Maganza", email = "riccardo@agentic-data.com"}]
requires-python = ">=3.10,<3.14"
dependencies = [
    "duckdb",
    "dbt-duckdb",
    "jupyter",
    "matplotlib",
    "pandas",
    "dbt-metricflow>=0.11.0,<0.12",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[dependency-groups]
dev = []

[tool.jupyter]
 kernelspec = "python3"

# dbt-metricflow 0.11 → metricflow 0.209 richiede dbt-semantic-interfaces pre-release su PyPI;
# senza questo, `uv lock` non risolve.
[tool.uv]
prerelease = "allow"
